--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-.body {
+
+p {
+  margin: 0;
+  color: rgb(15, 179, 255);
+}
+
+body {
   margin: 0;
   font-family: sans-serif;
   font-weight: bold;
