--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ p {
   font-weight: bold;
   background-color: rgb(20, 20, 20);
 }
+
+.footer { 
+  position: fixed;     
+  text-align: center;    
+  bottom: 0px; 
+  width: 100%;
+}
