--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ p {
 .footer { 
   position: fixed;     
   text-align: center;    
-  bottom: 0px; 
+  bottom: 0;
+  left: 0;
   width: 100%;
   background-color: rgb(15, 179, 255);
 }
