--- a/style.css
+++ b/style.css
@@ -19,3 +19,11 @@
   width: 100%;
   background-color: rgb(15, 179, 255);
 }
+
+.item {
+  display: inline-block;
+  margin: 10px;
+  background-color: rgb(51, 52, 51);
+  border-radius: 5px;
+  width: 144px;
+}
