--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@
 
 .item {
   display: inline-block;
-  margin: 10px;
+  margin: 0.1in;
   background-color: rgb(51, 51, 51);
-  border-radius: 5px;
-  width: 144px;
+  border-radius: 0.1in;
+  width: 3in;
 }
